without auth and animations

--- a/src/styles/myPlaces.css
+++ b/src/styles/myPlaces.css
@@ -6,18 +6,25 @@
   padding: 30px 50px; }
 
 .places-space {
+  padding: 0 150px;
   display: flex;
   flex-direction: row;
-  justify-content: space-around; }
+  justify-content: space-between; }
 
 .places-list {
   width: 400px;
   height: 450px;
-  overflow-y: scroll;
-  border: 1px solid gray; }
+  overflow-y: scroll; }
   .places-list__item {
     font-size: 20px; }
     .places-list__item p {
       margin: 0; }
+
+.weather-space {
+  position: relative; }
+  .weather-space__loader {
+    position: absolute;
+    top: 45%;
+    left: -200px; }
 
 /*# sourceMappingURL=myPlaces.css.map */
