--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -29,7 +29,8 @@ a {
   border: none;
   border-radius: 7px;
   font-size: 16px;
-  cursor: pointer; }
+  cursor: pointer;
+  transition: color 0.2s; }
   .button:hover {
     color: #4e4d4a; }
 
