--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -28,6 +28,7 @@
 
 .map-container {
   width: 700px;
-  height: 450px; }
+  height: 450px;
+  box-shadow: 0px 10px 32px -6px #4e4d4a; }
 
 /*# sourceMappingURL=main.css.map */
