--- a/src/styles/weatherCard.sass
+++ b/src/styles/weatherCard.sass
@@ -4,11 +4,12 @@ $button-color: #ecf0f1
 
 .weather-card
   width: 320px
-  height: 430px
+  height: 433px
   padding-left: 30px
   padding-top: 20px
   background-color: #fff
   font-size: 18px
+  box-shadow: 0px 10px 32px -6px rgba(78,77,74,1)
 
   &__place
     font-size: 26px
@@ -34,10 +35,16 @@ $button-color: #ecf0f1
   &__C
     border-bottom-left-radius: 5px
     border-top-left-radius: 5px
+    cursor: pointer
 
   &__F
     border-bottom-right-radius: 5px
     border-top-right-radius: 5px
+    cursor: pointer
+
+.active-temp
+  background-color: $theme-color
+  transition: all 0.2s
 
 .value-list
   margin: 20px 0 0
