--- a/src/styles/settings.sass
+++ b/src/styles/settings.sass
@@ -1,4 +1,5 @@
 $dark: #4e4d4a
+$theme-color: #d26c22
 
 .settings
   padding: 15px
@@ -42,6 +43,10 @@ section
 
     &.dark
       background-color: $dark
+
+.color-active
+  border: 2px solid $theme-color
+  background-color: red
 
 .font-style-settings__list
   width: 110px
