--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -26,6 +26,11 @@
       top: 45%;
       left: -200px; }
 
+.error {
+  width: 350px;
+  margin: auto;
+  text-align: center; }
+
 .map-container {
   width: 700px;
   height: 450px;
