--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -5,6 +5,7 @@ body {
 
 .container {
   width: 1200px;
+  height: 570px;
   margin: auto;
   background-color: #ecf0f1; }
 
@@ -33,5 +34,14 @@ a {
   transition: color 0.2s; }
   .button:hover {
     color: #4e4d4a; }
+
+.error-page {
+  width: 100%;
+  height: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around; }
+  .error-page__title {
+    display: block; }
 
 /*# sourceMappingURL=app.css.map */
