--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -9,6 +9,7 @@ body
 
 .container
   width: 1200px
+  height: 570px
   margin: auto
   background-color: #ecf0f1
 
@@ -38,3 +39,14 @@ a
 
   &:hover
     color: $dark
+
+.error-page
+  width: 100%
+  height: 400px
+  display: flex
+  align-items: center
+  justify-content: space-around
+
+  &__title
+    display: block
+
