--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -38,3 +38,10 @@
   width: 700px
   height: 450px
   box-shadow: 0px 10px 32px -6px rgba(78,77,74,1)
+
+.fade-appear
+  opacity: 0.01
+
+.fade-appear-active
+  opacity: 1
+  transition: 300ms ease-out all
