--- a/src/styles/myPlaces.sass
+++ b/src/styles/myPlaces.sass
@@ -30,5 +30,24 @@
     top: 45%
     left: -200px
 
+.no-places
+  margin: 20px 100px
 
+.error
+  width: 350px
+  margin: auto
+  text-align: center
 
+.deletePlace-leave
+  opacity: 1
+
+.deletePlace-leave-active
+  opacity: 0
+  transition: 300ms ease-out all
+
+.places-appear
+  opacity: 0.01
+
+.places-appear-active
+  opacity: 1
+  transition: opacity .3s ease-in
