--- a/src/styles/settings.sass
+++ b/src/styles/settings.sass
@@ -63,3 +63,10 @@ section
 .feature-settings__list__item
   margin-bottom: 10px
   cursor: pointer
+
+.settings-appear
+  opacity: 0.01
+
+.settings-appear-active
+  opacity: 1
+  transition: 300ms ease-out all
