--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -7,7 +7,9 @@ body {
   width: 1200px;
   height: 570px;
   margin: auto;
-  background-color: #ecf0f1; }
+  margin-top: 20px;
+  background-color: #ecf0f1;
+  box-shadow: 0px 0px 30px 0px #4e4d4a; }
 
 body, h1, h2, h3, h4, h5, ul, li {
   margin: 0;
