--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -11,7 +11,10 @@ body
   width: 1200px
   height: 570px
   margin: auto
+  margin-top: 20px
   background-color: #ecf0f1
+  //border: 2px solid $theme-color
+  box-shadow: 0px 0px 30px 0px $dark
 
 body, h1, h2, h3, h4, h5, ul, li
   margin: 0
